2011-06-20  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/cfg/shell.jl: don't load old sawfish.cfg.widgets
	widgets, even if they are installed

2011-06-19  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/cfg/widgets/*.jl
	* lisp/sawfish/gtk/widgets/: moved all widgets into sawfish.gtk. tree

2011-06-18  Christopher Roy Bratusek <nano@tuxfamily.org>
	* scripts/Makefile.in: install sawfish-about in $BINDIR

	* lisp/sawfish/wm/commands/help.jl: updated

	* lisp/sawfish/cfg/shell.jl: add buttons for accessing Wiki, Info,
	resource file and about-dialog to SawfishConfig. 

	* scripts/sawfish-about.jl: small update in about-dialog

	* lisp/sawfish/wm/ext/wallpaper.jl: fixed calling wallpaper-setter

	* lisp/sawfish/gtk/widgets/image.jl: fixed initializing the widget

2011-06-14  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfih/wm/ext/match-window.jl
	* themes/StyleTab/theme.jl
	* lisp/sawfish/wm/animation/main.jl
	* lisp/sawfish/wm/viewport.jl: use 'range widget where appropriate

	* lisp/sawfish/wm/cfg/widgets/frame-style.jl: simplified 'frame-style
	widget a bit

2011-06-13  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/gtk/widgets/image.jl: improved loading of preview-image
	-- Lucas Pandolfo

	* lisp/sawfish/cfg/layout/keymaps.jl: ported selector for choosing
	keymap in SawfishConig to GtkComboBoxText

	* lisp/sawfish/gtk/widget.jl: added range widget. number-widget using
	GtkScale instead of GtkSpinButton

	* lisp/sawfish/wm/edge/conf.jl: use 'range widget

2011-06-11  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/cfg/widgets/workspace-geometry.jl: removed, unused

	* lisp/sawfish/wm/misc.jl: add call-with-pointer-grabbed

	* lisp/sawfish/wm/util/keymap.jl: read-event does now grab the pointer
	instead of keyboard, fixes setting mouse or mixed mouse-keyboard
	bindings from SawfishConfig (keyboard-only bindings still work)

	* lisp/sawfish/cfg/layouts/keymap.jl: removed beautify-keymap-name,