@@ -1,3 +1,8 @@
+2011-06-21  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/cfg/shell.jl: added button to install a theme (from
+	tar-xz). Transform `sawfish-absent' into
+	`sawfish-config-display-info', allowing to display any notice.
+
 2011-06-20  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/cfg/shell.jl: don't load old sawfish.cfg.widgets
 	widgets, even if they are installed
